--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,13 @@ sonar.organization=borisdundakov
 sonar.projectKey=BorisDundakov_Coding_challenges
 sonar.python.version=3
 
+sonar.sources=src
+sonar.dynamicAnalysis=reuseReports
+#sonar.core.codeCoveragePlugin=cobertura
+sonar.python.coverage.reportPaths=*coverage*.xml
+sonar.python.xunit.reportPath=xunit-result*.xml
+
+
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=.
+#sonar.sources=.
