--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ on:
       - master
   pull_request:
       types: [opened, synchronize, reopened]
+
 name: Main Workflow
 jobs:
   sonarcloud:
@@ -15,6 +16,27 @@ jobs:
       with:
         # Disabling shallow clone is recommended for improving relevancy of reporting
         fetch-depth: 0
+    
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pylint pytest pytest-cov selenium playwright
+    
+    - name: Running pytest
+      run: |
+        pytest -v  --cov --cov-report=xml --cov-report=html
+        
+    - name: Analysing the code with pylint
+      continue-on-error: true
+      run: |
+        pylint src/git_graph_automation
+        
+        
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
