--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,19 +22,19 @@ jobs:
       with:
         python-version: 3.9
     
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint pytest pytest-cov selenium playwright
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install pylint pytest pytest-cov selenium playwright
     
-    - name: Running pytest
-      run: |
-        pytest -v  --cov --cov-report=xml --cov-report=html
+#     - name: Running pytest
+#       run: |
+#         pytest -v  --cov --cov-report=xml --cov-report=html
         
-    - name: Analysing the code with pylint
-      continue-on-error: true
-      run: |
-        pylint src/git_graph_automation
+#     - name: Analysing the code with pylint
+#       continue-on-error: true
+#       run: |
+#         pylint src/git_graph_automation
         
         
     - name: SonarCloud Scan
