--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,7 @@ sonar.python.version=3
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=Coroutines_and_Tasks
+sonar.sources=.
+
+sonar.tests=src
+#sonar.test.inclusions=**/*.spec.js
