--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,4 +6,4 @@ sonar.python.version=3
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=.
 
-#sonar.test.inclusions=**/*.spec.js
+sonar.python.coverage.reportPaths=coverage.xml
