--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,5 +8,7 @@ sonar.sources=.
 
 sonar.python.coverage.reportPaths=coverage.xml
 
+sonar.python.lcov.reportPaths=coverage/lcov.info
+
 #adding debug
 sonar.verbose=true
