--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@
 #       with:
 #         # Disabling shallow clone is recommended for improving relevancy of reporting
 #         fetch-depth: 0
-    
+  
 #     - name: Set up Python 3.9
 #       uses: actions/setup-python@v2
 #       with:
@@ -64,6 +64,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      
+      - name: fix sonar.cs.analyzer.projectOutPaths
+        run: export SONAR_SCANNER_OPTS="-Xmx512m"
+      
       - name: Setup Python
         uses: actions/setup-python@v3
         with:
