--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,83 +1,56 @@
-# on:
-#   # Trigger analysis when pushing in master or pull requests, and when creating
-#   # a pull request.
-#   push:
-#     branches:
-#       - master
-#   pull_request:
-#       types: [opened, synchronize, reopened]
-
-
-# name: Main Workflow
-# jobs:
-#   sonarcloud:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@v2
-#       with:
-#         # Disabling shallow clone is recommended for improving relevancy of reporting
-#         fetch-depth: 0
-  
-#     - name: Set up Python 3.9
-#       uses: actions/setup-python@v2
-#       with:
-#         python-version: 3.9
-    
-# #     - name: Install dependencies
-# #       run: |
-# #         python -m pip install --upgrade pip
-# #         pip install pylint pytest pytest-cov selenium playwright
-    
-# #     - name: Running pytest
-# #       run: |
-# #         pytest -v  --cov --cov-report=xml --cov-report=html
-        
-# #     - name: Analysing the code with pylint
-# #       continue-on-error: true
-# #       run: |
-# #         pylint src/git_graph_automation
-        
-        
-#     - name: SonarCloud Scan
-#       uses: sonarsource/sonarcloud-github-action@master
-#       env:
-#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-
-
-
-
-###################################################################################
-name: Build
 on:
+  # Trigger analysis when pushing in master or pull requests, and when creating
+  # a pull request.
   push:
     branches:
       - master
   pull_request:
-    types: [opened, synchronize, reopened]
+      types: [opened, synchronize, reopened]
+name: Main Workflow
 jobs:
   sonarcloud:
-    name: SonarCloud
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+    - uses: actions/checkout@v2
+      with:
+        # Disabling shallow clone is recommended for improving relevancy of reporting
+        fetch-depth: 0
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+###################################################################################
+# name: Build
+# on:
+#   push:
+#     branches:
+#       - master
+#   pull_request:
+#     types: [opened, synchronize, reopened]
+# jobs:
+#   sonarcloud:
+#     name: SonarCloud
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           fetch-depth: 0
       
-      - name: fix sonar.cs.analyzer.projectOutPaths
-        run: export SONAR_SCANNER_OPTS="-Xmx512m"
+#       - name: fix sonar.cs.analyzer.projectOutPaths
+#         run: export SONAR_SCANNER_OPTS="-Xmx512m"
       
-      - name: Setup Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.9"
-      - name: Install tox and any other packages
-        run: pip install tox
-      - name: Run tox
-        run: tox -e py
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#       - name: Setup Python
+#         uses: actions/setup-python@v3
+#         with:
+#           python-version: "3.9"
+#       - name: Install tox and any other packages
+#         run: pip install tox
+#       - name: Run tox
+#         run: tox -e py
+#       - name: SonarCloud Scan
+#         uses: SonarSource/sonarcloud-github-action@master
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
