--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,11 +6,13 @@ sonar.python.version=3
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=.
 
-sonar.python.coverage.reportPaths=coverage.xml
+#sonar.python.coverage.reportPaths=coverage.xml
 
-sonar.python.lcov.reportPaths=coverage/lcov.info
+#sonar.python.lcov.reportPaths=coverage/lcov.info
 
 #adding debug
 sonar.verbose=true
 
-sonar.python.coveragePlugin=cobertura
+#sonar.python.coveragePlugin=cobertura
+
+
