--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,12 @@
 sonar.organization=borisdundakov
 sonar.projectKey=BorisDundakov_Coding_challenges
-sonar.python.version=3
+sonar.python.version=3.7,3.8,3.9
+sonar.language=py
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=.
+#sonar.sources=.
+sonar.sources=src/metadata
 
 #sonar.python.coverage.reportPaths=coverage.xml
 
