--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,33 @@
-on:
-  # Trigger analysis when pushing in master or pull requests, and when creating
-  # a pull request.
-  push:
-    branches:
-      - master
-  pull_request:
-      types: [opened, synchronize, reopened]
-name: Main Workflow
-jobs:
-  sonarcloud:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        # Disabling shallow clone is recommended for improving relevancy of reporting
-        fetch-depth: 0
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      with:
-        projectBaseDir: ${{ secrets.GITHUB_WORKSPACE }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+# on:
+#   # Trigger analysis when pushing in master or pull requests, and when creating
+#   # a pull request.
+#   push:
+#     branches:
+#       - master
+#   pull_request:
+#       types: [opened, synchronize, reopened]
+# name: Main Workflow
+# jobs:
+#   sonarcloud:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#       with:
+#         # Disabling shallow clone is recommended for improving relevancy of reporting
+#         fetch-depth: 0
+#     - name: SonarCloud Scan
+#       uses: sonarsource/sonarcloud-github-action@master
+#       with:
+#         projectBaseDir: ${{ secrets.GITHUB_WORKSPACE }}
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
       
       
-    - name: Where are wer
-      run: ls -a
+#     - name: Where are wer
+#       run: ls -a
+
 ###################################################################################
 # name: Build
 # on:
@@ -56,3 +57,47 @@ jobs:
 #         env:
 #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
 #           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+name: pylint
+
+on:
+  push:
+    branches:
+      - master
+      - develop
+      - release/*
+      - feature/*
+      - hotfix/*
+  pull_request:
+    types: [opened, synchronize, reopened]
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 100
+
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pylint pytest pytest-cov selenium playwright
+    - name: Running pytest
+      run: |
+        pytest -v  --cov --cov-report=xml --cov-report=html
+    - name: Analysing the code with pylint
+      continue-on-error: true
+      run: |
+        pylint src/git_graph_automation
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
