--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,8 +5,7 @@ sonar.language=py
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-#sonar.sources=.
-sonar.sources=src/metadata
+sonar.sources=.
 
 #sonar.python.coverage.reportPaths=coverage.xml
 
