--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,3 +17,9 @@ sonar.verbose=true
 #sonar.python.coveragePlugin=cobertura
 
 
+sonar.dynamicAnalysis=reuseReports
+sonar.core.codeCoveragePlugin=cobertura
+sonar.python.coverage.reportPaths=*coverage*.xml
+sonar.python.xunit.reportPath=xunit-result*.xml
+
+
