--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,62 +1,4 @@
-# on:
-#   # Trigger analysis when pushing in master or pull requests, and when creating
-#   # a pull request.
-#   push:
-#     branches:
-#       - master
-#   pull_request:
-#       types: [opened, synchronize, reopened]
-# name: Main Workflow
-# jobs:
-#   sonarcloud:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@v2
-#       with:
-#         # Disabling shallow clone is recommended for improving relevancy of reporting
-#         fetch-depth: 0
-#     - name: SonarCloud Scan
-#       uses: sonarsource/sonarcloud-github-action@master
-#       with:
-#         projectBaseDir: ${{ secrets.GITHUB_WORKSPACE }}
-#       env:
-#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      
-      
-      
-#     - name: Where are wer
-#       run: ls -a
-
-###################################################################################
-# name: Build
-# on:
-#   push:
-#     branches:
-#       - master
-#   pull_request:
-#     types: [opened, synchronize, reopened]
-# jobs:
-#   sonarcloud:
-#     name: SonarCloud
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#         with:
-#           fetch-depth: 0
-#       - name: Setup Python
-#         uses: actions/setup-python@v3
-#         with:
-#           python-version: "3.9"
-#       - name: Install tox and any other packages
-#         run: pip install tox
-#       - name: Run tox
-#         run: tox -e py
-#       - name: SonarCloud Scan
-#         uses: SonarSource/sonarcloud-github-action@master
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+# A pipe that executes repository information to sonarcloud
 
 name: pylint
 
