--- a/.github/workflows/sonnar-cloud.yml
+++ b/.github/workflows/sonnar-cloud.yml
@@ -12,12 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
-        fetch-depth: 100
+        submodules: recursive
+        fetch-depth: 0
 
     - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         python-version: 3.9
 
