--- a/.github/workflows/sonnar-cloud.yml
+++ b/.github/workflows/sonnar-cloud.yml
@@ -55,7 +55,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: |
-            -Dsonar.projectKey=republique-et-canton-de-geneve_noms-geographiques
-            -Dsonar.organization=etat-de-geneve-github
+#         with:
+#           args: |
+#             -Dsonar.projectKey=republique-et-canton-de-geneve_noms-geographiques
+#             -Dsonar.organization=etat-de-geneve-github
