--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,8 @@ sonar.language=py
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=.
+#sonar.sources=.
+sonar.sources=Coroutines_and_Tasks/
 
 #sonar.python.coverage.reportPaths=coverage.xml
 
