--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,22 +5,15 @@ sonar.language=py
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-#sonar.sources=.
-
-#sonar.python.coverage.reportPaths=coverage.xml
-
-#sonar.python.lcov.reportPaths=coverage/lcov.info
+sonar.sources=.
 
 #adding debug
 sonar.verbose=true
 
-#sonar.python.coveragePlugin=cobertura
-
-
+sonar.python.coveragePlugin=cobertura
 sonar.dynamicAnalysis=reuseReports
 sonar.core.codeCoveragePlugin=cobertura
 sonar.python.coverage.reportPaths=*coverage*.xml
 sonar.python.xunit.reportPath=xunit-result*.xml
-
 
 sonar.inclusions=*/*.py
