--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,19 +1,33 @@
 sonar.organization=borisdundakov
 sonar.projectKey=BorisDundakov_Coding_challenges
-sonar.python.version=3.7,3.8,3.9
-sonar.language=py
+
+###########################################################################
+
+
+#sonar.python.version=3.7,3.8,3.9
+#sonar.language=py
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=.
+#sonar.sources=.
 
 #adding debug
-sonar.verbose=true
+#sonar.verbose=true
 
-sonar.python.coveragePlugin=cobertura
+#sonar.python.coveragePlugin=cobertura
+#sonar.dynamicAnalysis=reuseReports
+#sonar.core.codeCoveragePlugin=cobertura
+#sonar.python.coverage.reportPaths=*coverage*.xml
+#sonar.python.xunit.reportPath=xunit-result*.xml
+
+#sonar.inclusions=*/*.py
+
+
+###########################################################################
+
+
+sonar.python.version=3.9
+sonar.sources=.
 sonar.dynamicAnalysis=reuseReports
 sonar.core.codeCoveragePlugin=cobertura
 sonar.python.coverage.reportPaths=*coverage*.xml
-sonar.python.xunit.reportPath=xunit-result*.xml
-
-sonar.inclusions=*/*.py
