--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,7 +25,7 @@ sonar.projectKey=BorisDundakov_Coding_challenges
 
 ###########################################################################
 
-#sonar.inclusions=*/*.py
+sonar.inclusions=**.py
 sonar.python.version=3.9
 sonar.sources=.
 sonar.dynamicAnalysis=reuseReports
