--- a/.github/workflows/sonnar-cloud.yml
+++ b/.github/workflows/sonnar-cloud.yml
@@ -49,23 +49,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-#       - uses: actions/checkout@v3
-#         with:
-#           submodules: recursive
-#           fetch-depth: 0
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          fetch-depth: 0
 
       - name: Analyze with SonarCloud
         uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: |
-            -Dsonar.projectKey=borisdundakov
-            -Dsonar.organization=BorisDundakov_Coding_challenges
-      - name: List dir
-        run: |
-              ls -a
-      - name: Where am I
-        run: |
-              pwd
