--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,7 +24,7 @@ sonar.projectKey=BorisDundakov_Coding_challenges
 
 
 ###########################################################################
-
+sonar.sourceEncoding=UTF-8
 sonar.inclusions=**.py
 sonar.python.version=3.9
 sonar.sources=.
